Correction du test ConcurrentModificationException